# contracts/openapi/modules/iam-session.yaml
@@ -97,6 +97,12 @@ paths:
       responses:
         '200':
           description: The profile is returned.
+          headers:
+            X-CSRF-Token:
+              $ref: '#/components/headers/CsrfToken'
+            Set-Cookie:
+              schema:
+                type: string
           content:
             application/json:
               schema:
@@ -120,6 +126,12 @@ paths:
       responses:
         '200':
           description: The updated profile is returned.
+          headers:
+            X-CSRF-Token:
+              $ref: '#/components/headers/CsrfToken'
+            Set-Cookie:
+              schema:
+                type: string
           content:
             application/json:
               schema:
